--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -21,3 +22,52 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+
+# Logs
+logs/
+*.log
+logs/*.log
+npm-debug.log
+yarn-debug.log
+pnpm-debug.log
+debug.log
+
+# Database credentials and secrets
+database.json
+config.json
+
+# PostgreSQL data
+*.pgsql
+*.pgpass
+*.pgadmin
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Editor/IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Build artifacts
+dist/
+build/
+coverage/
+
+# Ignore compiled binary files
+*.out
+*.o
+
+# Ignore Docker files (if using Docker)
+docker-compose.override.yml
